igt@xe_exec_compute_mode@* - incomplete/abort - WARNING: CPU: * PID: * at kernel/locking/lockdep.c* __lock_acquire*
<6> [203.002846] Console: switching to colour dummy device 80x25
<6> [203.002895] [IGT] xe_exec_compute_mode: executing
<6> [203.006431] [IGT] xe_exec_compute_mode: starting subtest twice-bindexecqueue-userptr
<4> [203.014964] ------------[ cut here ]------------
<4> [203.020248] DEBUG_LOCKS_WARN_ON(!test_bit(class_idx, lock_classes_in_use))
<4> [203.020255] WARNING: CPU: 3 PID: 4366 at kernel/locking/lockdep.c:5112 __lock_acquire+0x797/0x26f0
<4> [203.038214] Modules linked in: snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm snd_timer snd soundcore mei_gsc xe drm_gpuvm video drm_ttm_helper ttm gpu_sched drm_suballoc_helper drm_exec drm_display_helper drm_kunit_helpers kunit drm_buddy nls_iso8859_1 intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common i10nm_edac skx_edac_common nfit x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel cmdlinepart ast dm_multipath kvm smsc75xx dax_hmem ixgbe i2c_algo_bit scsi_dh_rdac spi_nor usbnet isst_if_mmio isst_if_mbox_pci mdio cxl_acpi drm_shmem_helper scsi_dh_emc crct10dif_pclmul pmt_telemetry pmt_class mtd scsi_dh_alua crc32_pclmul polyval_clmulni polyval_generic ghash_clmulni_intel sha512_ssse3 sha256_ssse3 sha1_ssse3 aesni_intel crypto_simd mii cryptd rapl intel_cstate cxl_core dca efi_pstore intel_th_gth isst_if_common drm_kms_helper intel_th_pci intel_th intel_vsec i2c_i801 igc mei_me spi_intel_pci i2c_smbus wmi spi_intel mei ipmi_ssif acpi_power_meter
<4> [203.038270] ipmi_si acpi_ipmi ipmi_devintf ipmi_msghandler acpi_pad mac_hid sch_fq_codel msr parport_pc ppdev lp parport drm ip_tables x_tables autofs4
<4> [203.154732] CPU: 3 UID: 0 PID: 4366 Comm: xe_exec_compute Not tainted 6.11.0-rc2-xe #1
<4> [203.163717] Hardware name: Intel Corporation ArcherCity/ArcherCity, BIOS EGSDCRB1.86B.0087.D13.2208261706 08/26/2022
<4> [203.175619] RIP: 0010:__lock_acquire+0x797/0x26f0
<4> [203.180997] Code: c0 0f 84 5c ff ff ff 44 8b 3d 29 94 56 02 45 85 ff 0f 85 4c ff ff ff 48 c7 c6 88 3e e2 82 48 c7 c7 f2 0c e0 82 e8 a9 b4 f4 ff <0f> 0b e9 35 ff ff ff 8b 7d 20 b9 01 00 00 00 89 c8 85 ff 0f 45 45
<4> [203.202161] RSP: 0018:ffa0000023ca7600 EFLAGS: 00010082
<4> [203.208116] RAX: 0000000000000000 RBX: ff110008a4d33a90 RCX: 0000000000000027
<4> [203.216233] RDX: 0000000000000027 RSI: 00000000ffff7fff RDI: ff1100085c9a1a08
<4> [203.224336] RBP: ffa0000023ca76a8 R08: 0000000000000000 R09: 00000000ffff7fff
<4> [203.232436] R10: ffa0000023ca73e8 R11: ff1100107fefdfe8 R12: ff110008a4d32bc0
<4> [203.240529] R13: 0000000000000000 R14: fffffffffac0c2fd R15: 0000000000000000
<4> [203.248636] FS: 00007f7330f09140(0000) GS:ff1100085c980000(0000) knlGS:0000000000000000
<4> [203.257833] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [203.264385] CR2: 00007f7330eff000 CR3: 0000000128360003 CR4: 0000000000771ef0
<4> [203.272489] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [203.280586] DR3: 0000000000000000 DR6: 00000000fffe07f0 DR7: 0000000000000400
<4> [203.288703] PKRU: 55555554
<4> [203.291834] Call Trace:
<4> [203.294672] <TASK>
<4> [203.297129] ? show_regs+0x67/0x70
<4> [203.301037] ? __warn+0x94/0x1b0
<4> [203.304763] ? __lock_acquire+0x797/0x26f0
<4> [203.309445] ? report_bug+0x1b7/0x1d0
<4> [203.313643] ? handle_bug+0x46/0x80
<4> [203.317651] ? exc_invalid_op+0x19/0x70
<4> [203.322060] ? asm_exc_invalid_op+0x1b/0x20
<4> [203.326857] ? __lock_acquire+0x797/0x26f0
<4> [203.331566] ? __lock_acquire+0x1094/0x26f0
<4> [203.336360] lock_acquire+0xc7/0x2e0
<4> [203.340459] ? dma_fence_enable_sw_signaling+0x17/0x40
<4> [203.346339] ? find_held_lock+0x31/0x90